Fix scrollbar/width issue

--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -45,7 +45,8 @@ html {
     box-sizing: border-box;
     background-color: $background-color;
     font-size: 16px;
-    overflow-y: overlay;
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
 
     @include md {
         font-size: 18px;
